# task_torrent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  consumers.yaml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: chunk-task.md  help-pack.md
.github/workflows/: build-landing.yml  plugin-validate.yml  test.yml
chunks/openonco/: README.md  add-cost-fields-meta-schema-2026-04-29-0030.md  bma-civic-eid-recheck-2026-04-29-0030.md  (+30 more)
docs/: chunk-system.md  consumer-onboarding.md  cross-repo-contract.md  drop-system.md  improvements-from-openonco-pilot.md  kb_data_quality_plan_2026-04-29.md  mvp-roadmap.md  openonco-clinical-review-privacy-compliance-plan.md  openonco-contribute-html-update-prompt.md  openonco-contributor-plugin-plan.md  openonco-developer-sync-prompt.md  openonco-first-case.md  openonco-pilot-workflow.md  openonco-plugin-handoff-plan.md  openonco-plugin-submission-strategy.md  owner-request-from-openonco-pilot.md  pack-system.md  product-vision.md  protocol-v0.4-design.md  safety-rules.md  script-vs-chunk-decision.md  tasktorrent-improvement-plan.md  user-plan-matching.md
landing/: app.js  chunks.json  index.html  install.sh  install.sh.sha256  metrics.json  style.css
scripts/: _generate_wave6_chunks.py  backfill_v0_5_fields.py  build_landing_data.py
skills/: biomarker-extraction.md  citation-verification.md  drug-evidence-mapping.md
tasktorrent/: __init__.py  config.py  init.py  lint_chunk_spec.py
tests/: test_config.py  test_init.py  test_lint_chunk_spec.py  test_openonco_job.py
(+21 files in other folders)
